Fix top alignment between first item in summary section and title of contact form

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -244,7 +244,7 @@ button {
 /* CONTACT INFO FORM */
 
 .contact-form-title {
-    padding: 20px 20px 10px;
+    padding: 15px 20px 10px;
 }
 
 .contact-form-contact {
